--- a/resources/application/admin/view/rule/form.html
+++ b/resources/application/admin/view/rule/form.html
@@ -6,7 +6,7 @@
           <label class="relative block">
               <span class="color-green font-w7">角色名称</span>
               <span class="color-desc margin-left-5">name</span>
-              <input type="text" name="name" value='{$vo.name|default=""}' placeholder="请输入角色名称" class="layui-input">
+              <input type="text" name="name" required value='{$vo.name|default=""}' placeholder="请输入角色名称" class="layui-input">
           </label>
       </div>
 
